--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.2"
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material": "^5.15.5",
+    "@mui/x-date-pickers": "^6.19.0",
+    "dayjs": "^1.11.10",
+    "react-calendar": "^4.8.0",
+    "react-moment": "^1.1.3",
+    "react-router-dom": "^6.21.3",
+    "react-select": "^5.8.0"
   }
 }
